# aoc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc/arithmetic/: sums.py
aoc/solutions/: template.py
aoc/solutions/twenty_twentyone/: constants.py  d1.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py
aoc/tests/twenty_twentyone/: test_d1.py  test_d2.py  test_d3.py  test_d4.py  test_d5.py  test_d6.py  test_d7.py  test_d8.py
