[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of code solutions"
authors = ["Nico Coallier <nicolas.coallier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.20.0"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"
pylama = "^8.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "poetry"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
